--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Sibo Gumbo and is
-      <a href="#" target="_blank"> open-sourced on Github</a>
+      <a href="https://github.com/sibo-gumbo/world-clock.git" target="_blank">
+        open-sourced on Github</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
