--- a/index.html
+++ b/index.html
@@ -17,19 +17,29 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">
+          1:48:15
+          <small>AM</small>
+        </div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Sydney</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">
+          1:48:15
+          <small>AM</small>
+        </div>
       </div>
     </div>
 
     <footer>
-      This project was coded by Sibo Gumbo and is
+      This project was coded by <strong>Sibo Gumbo</strong> and is
       <a href="https://github.com/sibo-gumbo/world-clock.git" target="_blank">
         open-sourced on Github</a
       >
