--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock - Sibo Gumbo</title>
   </head>
   <body>
@@ -13,28 +15,22 @@
         <option value="">Select a city...</option>
         <option value="">Capetown</option>
         <option value="">London</option>
-        <option value="">PerthS</option>
+        <option value="">Perth</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">August 15th 2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">
-          1:48:15
-          <small>AM</small>
-        </div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="sydney">
         <div>
           <h2>Sydney</h2>
-          <div class="date">August 15th 2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">
-          1:48:15
-          <small>AM</small>
-        </div>
+        <div class="time"></div>
       </div>
     </div>
 
