--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">Capetown</option>
-        <option value="">London</option>
-        <option value="">Perth</option>
+        <option value="Africa/Capetown">Capetown</option>
+        <option value="Europe/London">London</option>
+        <option value="Pacific/Perth">Perth</option>
+        <option value="America/New_York">New York</option>
       </select>
 
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="sydney">
-        <div>
-          <h2>Sydney</h2>
-          <div class="date"></div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
 
