--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <option value="">Select a city...</option>
         <option value="Africa/Capetown">Capetown</option>
         <option value="Europe/London">London</option>
-        <option value="Pacific/Perth">Perth</option>
+        <option value="Australia/Perth">Perth</option>
         <option value="America/New_York">New York</option>
       </select>
 
