Added current location

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="Africa/Capetown">Capetown</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="Australia/Perth">Perth</option>
         <option value="America/New_York">New York</option>
